--- a/NJWeb/web/modules/content/problem/search.xhtml
+++ b/NJWeb/web/modules/content/problem/search.xhtml
@@ -29,8 +29,9 @@
                                      styleClass="center-block"
                                      filteredValue="#{problemsBean.filteredProblems}"
                                      rowKey="#{p.idProblem}"
+                                     rows="15"
                                      paginator="true"
-                                     paginatorPosition="bottom"
+                                     paginatorPosition="bottom"                                     
                                      emptyMessage="#{msg['general.table.noinfo']}">
                             <f:facet name="header">
                                 <p:outputPanel>
