- Modulo Configuracion de parametros y seguridad. (60%)

--- a/NJWeb/web/commons/header.xhtml
+++ b/NJWeb/web/commons/header.xhtml
@@ -11,12 +11,17 @@
 
         <link rel="stylesheet" href="/go/to/css/customized-primefaces.css"/>
         <link rel="stylesheet" href="/go/to/css/customized-theme.css"/>
-        <link rel="stylesheet" href="/go/to/css/editor-customized.css"/>
         <link rel="stylesheet" href="/go/to/css/style.css"/>
         <link rel="stylesheet" href="/go/to/tools/frameworks/bootstrap/css/bootstrap.min.css"/>
-
+        
         <script src="/go/to/js/jquery/jquery-2.1.4.js"></script> 
         <script src="/go/to/tools/frameworks/bootstrap/js/bootstrap.min.js"></script>
+
+        <!-- Libs CodeMirror -->
+        <link rel="stylesheet" href="/go/to/tools/frameworks/codemirror/lib/codemirror.css "/>
+        <link rel="stylesheet" href="/go/to/tools/frameworks/codemirror/theme/eclipse.css"/>
+        <script src="/go/to/tools/frameworks/codemirror/lib/codemirror.js"/>
+        
         <link rel="icon" type="image/ico" href="/go/to/img/logo-icon.png"/>
         <title> #{msg['header.general.appweb']} </title>
     </f:facet>
