--- a/NJWeb/web/modules/board/score.xhtml
+++ b/NJWeb/web/modules/board/score.xhtml
@@ -13,18 +13,20 @@
         </f:metadata>
     </ui:define>
 
-
     <ui:define name="content">
-        <link href="/go/to/tools/frameworks/codemirror/lib/codemirror.css" rel="stylesheet"/>
-        <link href="/go/to/tools/frameworks/codemirror/addon/dialog/dialog.css" rel="stylesheet"/>
-        <script src="/go/to/tools/frameworks/codemirror/lib/codemirror.js"/>
-        <script src="/go/to/tools/frameworks/codemirror/mode/clike/clike.js"/>
-        <script src="/go/to/tools/frameworks/codemirror/keymap/emacs.js"/>
-        <script src="/go/to/tools/frameworks/codemirror/addon/edit/matchbrackets.js"/>
-        <script src="/go/to/tools/frameworks/codemirror/addon/comment/comment.js"/>
+
+        <script src="/go/to/tools/frameworks/codemirror/addon/selection/selection-pointer.js"></script>
         <script src="/go/to/tools/frameworks/codemirror/addon/dialog/dialog.js"/>
+        <script src="/go/to/tools/frameworks/codemirror/addon/selection/active-line.js"/>
+        <script src="/go/to/tools/frameworks/codemirror/addon/edit/matchbrackets.js"/>           
+        <script src="/go/to/tools/frameworks/codemirror/addon/comment/comment.js"/>
         <script src="/go/to/tools/frameworks/codemirror/addon/search/searchcursor.js"/>
         <script src="/go/to/tools/frameworks/codemirror/addon/search/search.js"/>
+        <link href="/go/to/tools/frameworks/codemirror/addon/dialog/dialog.css" rel="stylesheet"/>
+
+        <script src="/go/to/tools/frameworks/codemirror/keymap/emacs.js"/>
+
+        <script src="/go/to/tools/frameworks/codemirror/mode/clike/clike.js"/>
 
         <div id="panel-board-live" class="panel panel-default">
 
@@ -78,7 +80,7 @@
                     </p:column>
                     <p:column headerText="#{msg['general.label.view']}" width="40">
                         <p:commandLink styleClass="glyphicon glyphicon-paperclip"
-                                       oncomplete="PF('dlg-view-code').show();"
+                                       oncomplete="PF('wv-view-code').show();"
                                        action="#{problemsBean.actionViewCode(s.idSubmit)}" 
                                        update=":form-dlg-view-code"
                                        />
@@ -89,7 +91,7 @@
 
             <h:form id="form-dlg-view-code">
                 <p:dialog id="dlg-view-code"
-                          widgetVar="dlg-view-code" 
+                          widgetVar="wv-view-code" 
                           modal="true"
                           resizable="false" 
                           width="90%"
@@ -105,16 +107,28 @@
                         </div>
                     </div>
                     <script>
+                        var mixedMode = {
+                            name: "htmlmixed",
+                            scriptTypes: [{
+                                    matches: /\/x-handlebars-template|\/x-mustache/i,
+                                    mode: null
+                                }, {
+                                    matches: /(text|application)\/(x-)?vb(a|script)/i,
+                                    mode: "vbscript"
+                                }]
+                        };
+
                         var editor = CodeMirror.fromTextArea(document.getElementById("form-dlg-view-code:text-area-view-code"), {
-                            lineNumbers: false,
                             mode: "text/x-java",
                             keyMap: "emacs",
+                            lineNumbers: false,
                             styleActiveLine: true,
                             matchBrackets: true,
+                            selectionPointer: true,
                             readOnly: true
                         });
-                        //var theme = 'xq-light';
-                        //editor.setOption("theme", theme);
+                        var theme = 'eclipse';
+                        editor.setOption("theme", theme);
                     </script>
                 </p:dialog>
             </h:form>
@@ -127,6 +141,7 @@
                     console.log('refreshTextAreaViewCode - @echo');
                 }
             </script>
+        
         </div>
     </ui:define>
 </ui:composition>
