--- a/NJWeb/web/challenge/now.xhtml
+++ b/NJWeb/web/challenge/now.xhtml
@@ -3,15 +3,72 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets">
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">
 
     <f:view contentType="text/html">
         <h:head>
-            <ui:include src="/commons/header.xhtml"/>
+
+            <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
+            <meta name="viewport" content="width=device-width, initial-scale=1"/>
+            <link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css' />
+
+            <link rel="stylesheet" href="/go/to/tools/frameworks/bootstrap/css/lumen/bootstrap.min.css"/>
+
+            <script src="/go/to/js/jquery/jquery-2.1.4.js"></script> 
+            <script src="/go/to/tools/frameworks/bootstrap/js/bootstrap.min.js"></script>
+
+            <link rel="icon" type="image/ico" href="/go/to/img/logo-icon.png"/>
+            <title> #{msg['header.general.appweb']} </title>
         </h:head>
-        <h:body id="main-body">
+        <h:body id="main">
 
+            <div id="main-header">
+                <nav class="navbar navbar-default">
+                    <div class="container-fluid">
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <a class="navbar-brand" href="#">NagoJudge</a>
+                        </div>
 
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <div class="navbar-form navbar-left text-center">
+                                <p:commandLink styleClass="btn btn-default" style="padding-left: 80px; padding-right: 80px;" value="Problems" />
+                                <p:commandLink styleClass="btn btn-default" style="padding-left: 80px; padding-right: 80px;" value="Score" />
+                                <p:commandLink styleClass="btn btn-default" style="padding-left: 80px; padding-right: 80px;" value="Submit" />
+                            </div>
+                            <ul class="nav navbar-nav navbar-right">
+                                <li>
+                                    <a href="#">Sign Out</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+
+            <div id="main-body">
+                <p:dataTable id="table-score"
+                             var="p"
+                             widgetVar="widgetScoreChallenge"
+                             tableStyleClass="table table-striped table-hover"
+                             value="#{clientScoreBean.listScoreChallenge}"
+                             styleClass="center-block"
+                             filteredValue="#{clientScoreBean.filteredScoreChallenge}"
+                             rowKey="#{p.nameTeam}"
+                             rows="15"
+                             paginator="true"
+                             paginatorPosition="bottom"                                     
+                             emptyMessage="#{msg['general.table.noinfo']}">
+                    
+                    
+                </p:dataTable>
+            </div>
 
             <ui:include id="main-footer" src="/commons/footer.xhtml"/>
         </h:body>
