--- a/NJWeb/web/modules/practice/contest/search.xhtml
+++ b/NJWeb/web/modules/practice/contest/search.xhtml
@@ -10,6 +10,8 @@
 
     <ui:define name="metadata">
         <f:metadata>
+            <f:viewParam name="key" value="#{challengeViewBean.challengeMessageView.idChallenge}"/>
+            <f:viewParam name="id" value="#{challengeViewBean.idUser}"/>            
         </f:metadata>
     </ui:define>
 
