- Modulo, board competencias (28%) - Signin y select challenge view

--- a/NJLive/web/commons/header.xhtml
+++ b/NJLive/web/commons/header.xhtml
@@ -8,14 +8,10 @@
         <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-        <link rel="stylesheet" href="/go/to/css/customized-primefaces.css"/>
-        <link rel="stylesheet" href="/go/to/css/customized-theme.css"/>
-        <link rel="stylesheet" href="/go/to/css/style.css"/>
-
-
+        <link rel="stylesheet" href="/css/style-nj.css"/>
         <link rel="stylesheet" href="/tools/frameworks/bootstrap/css/bootstrap.min.css"/>
-        <script type="text/javascript" src="/tools/frameworks/bootstrap/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="/js/jquery-2.1.4.js"></script> 
+        <script type="text/javascript" src="/tools/frameworks/bootstrap/js/bootstrap.min.js"></script>
 
         <link rel="icon" type="image/ico" href="/img/logo-icon.png"/>
         <title> #{msg['header.general.appweb']} </title>
