--- a/NJLive/web/commons/navigation.xhtml
+++ b/NJLive/web/commons/navigation.xhtml
@@ -5,8 +5,46 @@
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:p="http://primefaces.org/ui">
 
-   
-   
+    <div id="main-navigtion">
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Nago Judge</a>
+                </div>
+
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <div class="navbar-form navbar-left text-center">
+                        <h:form>
+                            <p:commandLink styleClass="btn btn-default" style="width: 160px;"
+                                           value="Problems"
+                                           actionListener="#{clientBoardBean.actionShowPanelProblems}"
+                                           update=":panel-client-problems"/>
+                            <p:commandLink styleClass="btn btn-default" style="width: 160px;"
+                                           value="Score"
+                                           actionListener="#{clientBoardBean.actionShowPanelScore}" 
+                                           update="@all"/>
+                            <p:commandLink styleClass="btn btn-default" style="width: 160px;"
+                                           value="Submit"
+                                           actionListener="#{clientBoardBean.actionShowPanelSubmits}"
+                                           update="@all"/>
+                        </h:form>
+                    </div>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a href="#">Sign Out</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+
 
 
 </ui:composition>
